Update README with LazyVim JDTLS configuration
Add configuration for LazyVim with JDTLS support.